--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 /* Base styles */
 body {
     font-family: Arial, sans-serif;
-    /* background-color: #f0f2f5; */
-    background: linear-gradient(to right, rgb(72, 72, 136), white, rgb(72, 72, 136));
+    background-color: #f0f2f5;
+    background: linear-gradient(to right, rgb(151, 166, 175), rgb(236, 205, 205), rgb(144, 147, 130));
     color: #333;
     margin: 0;
     padding: 0;
@@ -15,16 +15,17 @@ body {
 form {
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 18px rgba(0, 0, 0, 0.1);
     padding: 20px 40px;
-    max-width: 400px;
-    width: 100%;
+    /* max-width: 400px; */
+    width: 40vw;
     box-sizing: border-box;
+    height: 87vh;
 }
 
 h1 {
     text-align: center;
-    color: #444;
+    color: #f65307;
     margin-bottom: 20px;
 }
 
@@ -32,7 +33,7 @@ label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
-    color: #666;
+    color: #f65307;
 }
 
 .required {
@@ -45,7 +46,7 @@ input[type="email"] {
     width: calc(100% - 20px);
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 14px;
@@ -64,7 +65,7 @@ button {
     padding: 12px;
     border: none;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #5059a0;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
@@ -72,7 +73,7 @@ button {
 }
 
 button:hover {
-    background-color: #00b354;
+    background-color: #fb6304;
 }
 
 button:active {
